# i3s-lib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
.github/workflows/: build_ubuntu.yaml
examples/obj2slpk/: README.md  main.cpp
examples/raster2slpk/: README.md  main.cpp  raster2slpk.vcxproj
include/i3s/: i3s_common.h  i3s_common_dom.h  i3s_enums.h  i3s_enums_generated.h  i3s_writer.h
include/utils/: utl_basic_tracker_api.h  utl_box.h  utl_buffer.h  utl_datetime.h  utl_declptr.h  utl_enum_flag_op.h  utl_geom.h  utl_gzip_context.h  utl_i3s_assert.h  utl_i3s_export.h  utl_i3s_resource_defines.h  utl_jpeg.h  utl_png.h  utl_serialize.h  utl_serialize_json.h  utl_serialize_json_dom.h  utl_shared_objects.h  utl_static_vector.h  utl_string.h  utl_variant.h
projects/: .gitignore  build_cmake_clang.cmd  build_cmake_msvc.cmd  build_msbuild.cmd  i3s.sln  i3s.vcxproj  i3s.vcxproj.filters  i3s_static.vcxproj  i3s_static.vcxproj.filters
src/: dllmain.cpp  pch.cpp  pch.h
src/i3s/: i3s_attribute_buffer_encoder.cpp  i3s_attribute_buffer_encoder.h  i3s_common_.h  i3s_context_impl.cpp  i3s_enums_generated.cpp  i3s_index_dom.h  i3s_layer_dom.cpp  i3s_layer_dom.h  i3s_legacy_mesh.cpp  i3s_legacy_mesh.h  i3s_legacy_shared_dom.h  i3s_material_dom.h  i3s_mesh_dom.h  i3s_pages.h  i3s_pages_breadthfirst.cpp  i3s_pages_breadthfirst.h  i3s_pages_localsubtree.cpp  i3s_pages_localsubtree.h  i3s_writer_impl.cpp  i3s_writer_impl.h
src/utils/: utl_base64.cpp  utl_base64.h  utl_bitstream.h  utl_box.h  utl_buffer.cpp  utl_bvh.cpp  utl_bvh.h  utl_colors.cpp  utl_colors.h  utl_crc32.h  utl_datetime.cpp  utl_endian.h  utl_envelope.cpp  utl_envelope.h  utl_fs.cpp  utl_fs.h  utl_geographic.h  utl_gzip.cpp  utl_gzip.h  utl_gzip_context.cpp  utl_image_2d.cpp  utl_image_2d.h  utl_image_resize.cpp  utl_image_resize.h  utl_io.h  utl_jpeg.cpp  utl_json_helper.h  utl_libbasis_api.cpp  utl_libbasis_api.h  utl_libdraco_api.cpp  utl_libdraco_api.h  utl_lock.h  utl_mbs.h  utl_md5.cpp  utl_md5.h  utl_mime.cpp  utl_mime.h  utl_obb.cpp  utl_obb.h  utl_platform_def.h  (+26 more)
src/utils/dxt/: IntelDXTCompressor.cpp  IntelDXTCompressor.h  dds.h  utl_dxt_config.h  utl_dxt_mipmap_dds.cpp  utl_dxt_mipmap_dds.h
src/utils/json/: json.h  jsoncpp.cpp
src/utils/win/: utl_windows.h
